k8s/adservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      containers:
        - name: adservice
          image: 865749917919.dkr.ecr.us-east-1.amazonaws.com/adservice:b03773cf983cbd5b115020ccc59bdb9352362673
          ports:
            - containerPort: 9555
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
spec:
  selector:
    app: adservice
  ports:
    - port: 9555
      targetPort: 9555
