k8s/cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      containers:
        - name: cartservice
          image: 865749917919.dkr.ecr.us-east-1.amazonaws.com/cartservice:b03773cf983cbd5b115020ccc59bdb9352362673
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
spec:
  selector:
    app: cartservice
  ports:
    - port: 8080
      targetPort: 8080
