k8s/checkoutservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      containers:
        - name: checkoutservice
          image: 865749917919.dkr.ecr.us-east-1.amazonaws.com/checkoutservice:b03773cf983cbd5b115020ccc59bdb9352362673
          ports:
            - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
spec:
  selector:
    app: checkoutservice
  ports:
    - port: 5050
      targetPort: 5050
