k8s/currencyservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
    spec:
      containers:
        - name: currencyservice
          image: 865749917919.dkr.ecr.us-east-1.amazonaws.com/currencyservice:b03773cf983cbd5b115020ccc59bdb9352362673
          ports:
            - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
spec:
  selector:
    app: currencyservice
  ports:
    - port: 7000
      targetPort: 7000
