k8s/emailservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
        - name: emailservice
          image: 865749917919.dkr.ecr.us-east-1.amazonaws.com/emailservice:b03773cf983cbd5b115020ccc59bdb9352362673
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
spec:
  selector:
    app: emailservice
  ports:
    - port: 8080
      targetPort: 8080
