k8s/productcatalogservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      containers:
        - name: productcatalogservice
          image: 865749917919.dkr.ecr.us-east-1.amazonaws.com/productcatalogservice:b03773cf983cbd5b115020ccc59bdb9352362673
          ports:
            - containerPort: 3550
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
spec:
  selector:
    app: productcatalogservice
  ports:
    - port: 3550
      targetPort: 3550
