k8s/recommendationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      containers:
        - name: recommendationservice
          image: 865749917919.dkr.ecr.us-east-1.amazonaws.com/recommendationservice:b03773cf983cbd5b115020ccc59bdb9352362673
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
spec:
  selector:
    app: recommendationservice
  ports:
    - port: 8080
      targetPort: 8080
