k8s/shippingservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      containers:
        - name: shippingservice
          image: 865749917919.dkr.ecr.us-east-1.amazonaws.com/shippingservice:b03773cf983cbd5b115020ccc59bdb9352362673
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
spec:
  selector:
    app: shippingservice
  ports:
    - port: 50051
      targetPort: 50051
