k8s/shoppingassistantservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingassistantservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoppingassistantservice
  template:
    metadata:
      labels:
        app: shoppingassistantservice
    spec:
      containers:
        - name: shoppingassistantservice
          image: 865749917919.dkr.ecr.us-east-1.amazonaws.com/shoppingassistantservice:v2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingassistantservice
spec:
  selector:
    app: shoppingassistantservice
  ports:
    - port: 8080
      targetPort: 8080
